--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,7 +12,7 @@ git_edit_address: https://github.com/lovoo/goka/blob/_docs_
 
 # theme options from https://bootswatch.com/3/
 # comment out this to use default Bootstrap
-bootwatch: spacelab # cerulean cosmo custom cyborg darkly flatly journal lumen readable sandstone simplex slate solar spacelab superhero united yeti
+bootwatch: lumen # cerulean cosmo custom cyborg darkly flatly journal lumen readable sandstone simplex slate solar spacelab superhero united yeti
 
 # Build settings
 markdown: kramdown
@@ -39,13 +39,6 @@ defaults:
   values:
     layout: post
     sectionid: blog
-
-- scope:
-    path: _tutorial
-    type: docs
-  values:
-    layout: page
-    sectionid: tutorial
 
 - scope:
     path: _docs
